03-kubernetes/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: intern
  namespace: intern
  labels:
    app: intern
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: intern
