03-kubernetes/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intern
  namespace: intern
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: intern.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: intern
            port:
              number: 80
